--- a/challenges/web-frontend/caronsale/angular.json
+++ b/challenges/web-frontend/caronsale/angular.json
@@ -1,69 +1,79 @@
 {
-  "version": 1,
+  "cli": {
+    "defaultCollection": "@nrwl/angular"
+  },
+  "defaultProject": "car-on-sale",
   "projects": {
-    "car-on-sale": {
-      "projectType": "application",
-      "schematics": {
-        "@nrwl/angular:component": {
-          "style": "styl"
+    "authentication": {
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "exclude": ["**/node_modules/**", "!libs/authentication/**"],
+            "tsConfig": [
+              "libs/authentication/tsconfig.lib.json",
+              "libs/authentication/tsconfig.spec.json"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/authentication/jest.config.js",
+            "setupFile": "libs/authentication/src/test-setup.ts",
+            "tsConfig": "libs/authentication/tsconfig.spec.json"
+          }
         }
       },
-      "root": "apps/car-on-sale",
-      "sourceRoot": "apps/car-on-sale/src",
       "prefix": "caronsale",
+      "projectType": "library",
+      "root": "libs/authentication",
+      "schematics": {},
+      "sourceRoot": "libs/authentication/src"
+    },
+    "car-on-sale": {
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/apps/car-on-sale",
-            "index": "apps/car-on-sale/src/index.html",
-            "main": "apps/car-on-sale/src/main.ts",
-            "polyfills": "apps/car-on-sale/src/polyfills.ts",
-            "tsConfig": "apps/car-on-sale/tsconfig.app.json",
-            "aot": false,
-            "assets": [
-              "apps/car-on-sale/src/favicon.ico",
-              "apps/car-on-sale/src/assets"
-            ],
-            "styles": ["apps/car-on-sale/src/styles.styl"],
-            "scripts": []
-          },
           "configurations": {
             "production": {
+              "aot": true,
+              "budgets": [
+                {
+                  "maximumError": "5mb",
+                  "maximumWarning": "2mb",
+                  "type": "initial"
+                }
+              ],
+              "buildOptimizer": true,
+              "extractCss": true,
+              "extractLicenses": true,
               "fileReplacements": [
                 {
                   "replace": "apps/car-on-sale/src/environments/environment.ts",
                   "with": "apps/car-on-sale/src/environments/environment.prod.ts"
                 }
               ],
+              "namedChunks": false,
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                }
-              ]
+              "vendorChunk": false
             }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "car-on-sale:build"
           },
-          "configurations": {
-            "production": {
-              "browserTarget": "car-on-sale:build:production"
-            }
+          "options": {
+            "aot": false,
+            "assets": [
+              "apps/car-on-sale/src/favicon.ico",
+              "apps/car-on-sale/src/assets"
+            ],
+            "index": "apps/car-on-sale/src/index.html",
+            "main": "apps/car-on-sale/src/main.ts",
+            "outputPath": "dist/apps/car-on-sale",
+            "polyfills": "apps/car-on-sale/src/polyfills.ts",
+            "scripts": [],
+            "styles": ["apps/car-on-sale/src/styles.styl"],
+            "tsConfig": "apps/car-on-sale/tsconfig.app.json"
           }
         },
         "extract-i18n": {
@@ -75,62 +85,139 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
+            "exclude": ["**/node_modules/**", "!apps/car-on-sale/**"],
             "tsConfig": [
               "apps/car-on-sale/tsconfig.app.json",
               "apps/car-on-sale/tsconfig.spec.json"
-            ],
-            "exclude": ["**/node_modules/**", "!apps/car-on-sale/**"]
+            ]
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "car-on-sale:build:production"
+            }
+          },
+          "options": {
+            "browserTarget": "car-on-sale:build"
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "apps/car-on-sale/jest.config.js",
-            "tsConfig": "apps/car-on-sale/tsconfig.spec.json",
-            "setupFile": "apps/car-on-sale/src/test-setup.ts"
+            "setupFile": "apps/car-on-sale/src/test-setup.ts",
+            "tsConfig": "apps/car-on-sale/tsconfig.spec.json"
           }
         }
-      }
+      },
+      "prefix": "caronsale",
+      "projectType": "application",
+      "root": "apps/car-on-sale",
+      "schematics": {
+        "@nrwl/angular:component": {
+          "style": "styl"
+        }
+      },
+      "sourceRoot": "apps/car-on-sale/src"
     },
     "car-on-sale-e2e": {
-      "root": "apps/car-on-sale-e2e",
-      "sourceRoot": "apps/car-on-sale-e2e/src",
-      "projectType": "application",
       "architect": {
         "e2e": {
           "builder": "@nrwl/cypress:cypress",
-          "options": {
-            "cypressConfig": "apps/car-on-sale-e2e/cypress.json",
-            "tsConfig": "apps/car-on-sale-e2e/tsconfig.e2e.json",
-            "devServerTarget": "car-on-sale:serve"
-          },
           "configurations": {
             "production": {
               "devServerTarget": "car-on-sale:serve:production"
             }
+          },
+          "options": {
+            "cypressConfig": "apps/car-on-sale-e2e/cypress.json",
+            "devServerTarget": "car-on-sale:serve",
+            "tsConfig": "apps/car-on-sale-e2e/tsconfig.e2e.json"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["apps/car-on-sale-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/car-on-sale-e2e/**"]
+            "exclude": ["**/node_modules/**", "!apps/car-on-sale-e2e/**"],
+            "tsConfig": ["apps/car-on-sale-e2e/tsconfig.e2e.json"]
           }
         }
-      }
+      },
+      "projectType": "application",
+      "root": "apps/car-on-sale-e2e",
+      "sourceRoot": "apps/car-on-sale-e2e/src"
+    },
+    "data": {
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "exclude": ["**/node_modules/**", "!libs/data/**"],
+            "tsConfig": [
+              "libs/data/tsconfig.lib.json",
+              "libs/data/tsconfig.spec.json"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/data/jest.config.js",
+            "setupFile": "libs/data/src/test-setup.ts",
+            "tsConfig": "libs/data/tsconfig.spec.json"
+          }
+        }
+      },
+      "prefix": "caronsale",
+      "projectType": "library",
+      "root": "libs/data",
+      "schematics": {},
+      "sourceRoot": "libs/data/src"
+    },
+    "ui": {
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "exclude": ["**/node_modules/**", "!libs/ui/**"],
+            "tsConfig": [
+              "libs/ui/tsconfig.lib.json",
+              "libs/ui/tsconfig.spec.json"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/ui/jest.config.js",
+            "setupFile": "libs/ui/src/test-setup.ts",
+            "tsConfig": "libs/ui/tsconfig.spec.json"
+          }
+        }
+      },
+      "prefix": "caronsale",
+      "projectType": "library",
+      "root": "libs/ui",
+      "schematics": {},
+      "sourceRoot": "libs/ui/src"
     }
-  },
-  "cli": {
-    "defaultCollection": "@nrwl/angular"
   },
   "schematics": {
     "@nrwl/angular:application": {
-      "unitTestRunner": "jest",
-      "e2eTestRunner": "cypress"
+      "e2eTestRunner": "cypress",
+      "unitTestRunner": "jest"
     },
     "@nrwl/angular:library": {
       "unitTestRunner": "jest"
+    },
+    "@schematics/angular:component": {
+      "skipTests": true,
+      "spec": false,
+      "style": "styl",
+      "styleext": "styl"
     }
   },
-  "defaultProject": "car-on-sale"
+  "version": 1
 }
