--- a/challenges/web-frontend/caronsale/nx.json
+++ b/challenges/web-frontend/caronsale/nx.json
@@ -1,17 +1,26 @@
 {
-  "npmScope": "caronsale",
   "implicitDependencies": {
     "angular.json": "*",
+    "nx.json": "*",
     "package.json": "*",
     "tsconfig.json": "*",
-    "tslint.json": "*",
-    "nx.json": "*"
+    "tslint.json": "*"
   },
+  "npmScope": "caronsale",
   "projects": {
-    "car-on-sale-e2e": {
+    "authentication": {
       "tags": []
     },
     "car-on-sale": {
+      "tags": []
+    },
+    "car-on-sale-e2e": {
+      "tags": []
+    },
+    "data": {
+      "tags": []
+    },
+    "ui": {
       "tags": []
     }
   }
