--- a/challenges/web-frontend/caronsale/package.json
+++ b/challenges/web-frontend/caronsale/package.json
@@ -1,33 +1,4 @@
 {
-  "name": "caronsale",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "nx": "nx",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "nx workspace-lint && ng lint",
-    "e2e": "ng e2e",
-    "affected:apps": "nx affected:apps",
-    "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "ng update @nrwl/workspace",
-    "update:check": "ng update",
-    "workspace-schematic": "nx workspace-schematic",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help"
-  },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.2",
     "@angular/cdk": "^8.1.3",
@@ -67,9 +38,46 @@
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
     "prettier": "1.16.4",
+    "rxjs-tslint-rules": "^4.24.3",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
+    "ts-node-dev": "^1.0.0-pre.41",
     "tslint": "~5.11.0",
+    "tslint-angular": "^3.0.2",
+    "tslint-etc": "^1.6.0",
+    "tslint-no-circular-imports": "^0.7.0",
     "typescript": "~3.4.5"
-  }
+  },
+  "license": "MIT",
+  "name": "caronsale",
+  "private": true,
+  "scripts": {
+    "affected": "nx affected",
+    "affected:apps": "nx affected:apps",
+    "affected:build": "nx affected:build",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected:e2e": "nx affected:e2e",
+    "affected:libs": "nx affected:libs",
+    "affected:lint": "nx affected:lint",
+    "affected:test": "nx affected:test",
+    "build": "ng build",
+    "dep-graph": "nx dep-graph",
+    "e2e": "ng e2e",
+    "format": "nx format:write",
+    "format:check": "nx format:check",
+    "format:write": "nx format:write",
+    "help": "nx help",
+    "lint": "nx workspace-lint && ng lint",
+    "ng": "ng",
+    "nx": "nx",
+    "remove-unused-imports": "tslint --config tslint-imports.json --fix --project ./",
+    "start": "ng serve",
+    "test": "ng test",
+    "tsn": "ts-node-dev --respawn --project ts-node-config.json",
+    "update": "ng update @nrwl/workspace",
+    "update:check": "ng update",
+    "watch": "tsc --project tsconfig.watch.json --watch",
+    "workspace-schematic": "nx workspace-schematic"
+  },
+  "version": "0.0.0"
 }
