--- a/challenges/web-frontend/caronsale/package.json
+++ b/challenges/web-frontend/caronsale/package.json
@@ -16,6 +16,7 @@
     "@ngrx/store": "8.1.0",
     "@nrwl/angular": "8.4.12",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
@@ -37,6 +38,7 @@
     "eslint": "6.1.0",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
+    "js-sha512": "^0.8.0",
     "prettier": "1.16.4",
     "rxjs-tslint-rules": "^4.24.3",
     "ts-jest": "24.0.0",
