add authentication module

--- a/challenges/web-frontend/caronsale/angular.json
+++ b/challenges/web-frontend/caronsale/angular.json
@@ -212,6 +212,10 @@
     "@nrwl/angular:library": {
       "unitTestRunner": "jest"
     },
+    "@nrwl/angular:ngrx": {
+      "facade": true,
+      "syntax": "creators"
+    },
     "@schematics/angular:component": {
       "skipTests": true,
       "spec": false,
