--- a/challenges/web-frontend/caronsale/tsconfig.json
+++ b/challenges/web-frontend/caronsale/tsconfig.json
@@ -12,12 +12,14 @@
     "paths": {
       "@caronsale/authentication": ["libs/authentication/src/index.ts"],
       "@caronsale/data": ["libs/data/src/index.ts"],
-      "@caronsale/ui": ["libs/ui/src/index.ts"]
+      "@caronsale/ui": ["libs/ui/src/index.ts"],
+      "@caronsale/buyer": ["libs/buyer/src/index.ts"]
     },
     "rootDir": ".",
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
     "sourceMap": true,
+    "strict": true,
     "target": "es2015",
     "typeRoots": ["node_modules/@types"]
   },
