--- a/challenges/web-frontend/caronsale/package.json
+++ b/challenges/web-frontend/caronsale/package.json
@@ -10,6 +10,7 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@auth0/angular-jwt": "^3.0.0",
     "@ngrx/effects": "8.1.0",
     "@ngrx/entity": "8.1.0",
     "@ngrx/router-store": "8.1.0",
@@ -17,6 +18,7 @@
     "@nrwl/angular": "8.4.12",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "just-intersect": "^3.1.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
