--- a/challenges/web-frontend/caronsale/nx.json
+++ b/challenges/web-frontend/caronsale/nx.json
@@ -25,6 +25,12 @@
     },
     "buyer": {
       "tags": []
+    },
+    "salesman": {
+      "tags": []
+    },
+    "dealership": {
+      "tags": []
     }
   }
 }
