--- a/challenges/web-frontend/caronsale/tsconfig.json
+++ b/challenges/web-frontend/caronsale/tsconfig.json
@@ -14,7 +14,9 @@
       "@caronsale/authentication": ["libs/authentication/src/index.ts"],
       "@caronsale/buyer": ["libs/buyer/src/index.ts"],
       "@caronsale/data": ["libs/data/src/index.ts"],
-      "@caronsale/ui": ["libs/ui/src/index.ts"]
+      "@caronsale/ui": ["libs/ui/src/index.ts"],
+      "@caronsale/salesman": ["libs/salesman/src/index.ts"],
+      "@caronsale/dealership": ["libs/dealership/src/index.ts"]
     },
     "rootDir": ".",
     "skipDefaultLibCheck": true,
