add salesman auctions service

--- a/challenges/web-frontend/caronsale/tsconfig.json
+++ b/challenges/web-frontend/caronsale/tsconfig.json
@@ -16,7 +16,8 @@
       "@caronsale/data": ["libs/data/src/index.ts"],
       "@caronsale/ui": ["libs/ui/src/index.ts"],
       "@caronsale/salesman": ["libs/salesman/src/index.ts"],
-      "@caronsale/dealership": ["libs/dealership/src/index.ts"]
+      "@caronsale/dealership": ["libs/dealership/src/index.ts"],
+      "@caronsale/auctions": ["libs/auctions/src/index.ts"]
     },
     "rootDir": ".",
     "skipDefaultLibCheck": true,
