--- a/challenges/web-frontend/caronsale/angular.json
+++ b/challenges/web-frontend/caronsale/angular.json
@@ -4,6 +4,33 @@
   },
   "defaultProject": "car-on-sale",
   "projects": {
+    "auctions": {
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "exclude": ["**/node_modules/**", "!libs/auctions/**"],
+            "tsConfig": [
+              "libs/auctions/tsconfig.lib.json",
+              "libs/auctions/tsconfig.spec.json"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/auctions/jest.config.js",
+            "setupFile": "libs/auctions/src/test-setup.ts",
+            "tsConfig": "libs/auctions/tsconfig.spec.json"
+          }
+        }
+      },
+      "prefix": "caronsale",
+      "projectType": "library",
+      "root": "libs/auctions",
+      "schematics": {},
+      "sourceRoot": "libs/auctions/src"
+    },
     "authentication": {
       "architect": {
         "lint": {
@@ -203,6 +230,33 @@
       "schematics": {},
       "sourceRoot": "libs/data/src"
     },
+    "dealership": {
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "exclude": ["**/node_modules/**", "!libs/dealership/**"],
+            "tsConfig": [
+              "libs/dealership/tsconfig.lib.json",
+              "libs/dealership/tsconfig.spec.json"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/dealership/jest.config.js",
+            "setupFile": "libs/dealership/src/test-setup.ts",
+            "tsConfig": "libs/dealership/tsconfig.spec.json"
+          }
+        }
+      },
+      "prefix": "caronsale",
+      "projectType": "library",
+      "root": "libs/dealership",
+      "schematics": {},
+      "sourceRoot": "libs/dealership/src"
+    },
     "ui": {
       "architect": {
         "lint": {
@@ -229,33 +283,6 @@
       "root": "libs/ui",
       "schematics": {},
       "sourceRoot": "libs/ui/src"
-    },
-    "dealership": {
-      "projectType": "library",
-      "root": "libs/dealership",
-      "sourceRoot": "libs/dealership/src",
-      "prefix": "caronsale",
-      "architect": {
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "libs/dealership/tsconfig.lib.json",
-              "libs/dealership/tsconfig.spec.json"
-            ],
-            "exclude": ["**/node_modules/**", "!libs/dealership/**"]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "options": {
-            "jestConfig": "libs/dealership/jest.config.js",
-            "tsConfig": "libs/dealership/tsconfig.spec.json",
-            "setupFile": "libs/dealership/src/test-setup.ts"
-          }
-        }
-      },
-      "schematics": {}
     }
   },
   "schematics": {
@@ -280,6 +307,10 @@
       "styleext": "styl"
     },
     "@schematics/angular:guard": {
+      "skipTests": true,
+      "spec": false
+    },
+    "@schematics/angular:service": {
       "skipTests": true,
       "spec": false
     }
