add action grid

--- a/challenges/web-frontend/caronsale/tsconfig.watch.json
+++ b/challenges/web-frontend/caronsale/tsconfig.watch.json
@@ -2,6 +2,6 @@
   "compilerOptions": {
     "outDir": "./dist/out-tsc"
   },
-  "exclude": ["./apps/car-on-sale-e2e"],
+  "exclude": ["./apps/car-on-sale-e2e", "./dist"],
   "extends": "./tsconfig.json"
 }
