--- a/challenges/web-frontend/caronsale/package.json
+++ b/challenges/web-frontend/caronsale/package.json
@@ -21,6 +21,7 @@
     "hammerjs": "^2.0.8",
     "just-intersect": "^3.1.0",
     "ngx-img-fallback": "^1.3.4",
+    "ngx-moment": "^3.4.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
