--- a/challenges/web-frontend/caronsale/package.json
+++ b/challenges/web-frontend/caronsale/package.json
@@ -22,6 +22,7 @@
     "just-intersect": "^3.1.0",
     "ngx-img-fallback": "^1.3.4",
     "ngx-moment": "^3.4.0",
+    "ngx-text-overflow-clamp": "^0.0.1",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
