--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -13,9 +13,13 @@
     "@types/inversify": "^2.0.33",
     "@types/node": "^12.0.0",
     "inversify": "^4.13.0",
-    "mocha": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
+  },
+  "devDependencies": {
+    "@types/mocha": "^8.0.3",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
