Added make ssh command, to start and ssh into a container

--- a/challenges/backend/Makefile
+++ b/challenges/backend/Makefile
@@ -7,3 +7,9 @@ build:
 
 test: build
 	docker run --rm -it caronsale-dev npm test
+
+run: build
+	docker run --rm -it caronsale-dev npm start
+
+ssh:
+	docker run --rm -it caronsale-dev /bin/bash
