--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/inversify": "^2.0.33",
     "@types/node": "^12.0.0",
+    "axios": "^0.20.0",
     "inversify": "^4.13.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
