--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/mocha": "^8.0.3",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "sinon": "^9.0.3"
   }
 }
