--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "axios": "^0.20.0",
     "inversify": "^4.13.0",
+    "jsonschema": "^1.2.6",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
