--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -23,6 +23,7 @@
     "@types/mocha": "^8.0.3",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "sinon": "^9.0.3"
+    "sinon": "^9.0.3",
+    "tslint": "^6.1.3"
   }
 }
