--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -24,6 +24,7 @@
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "sinon": "^9.0.3",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "tslint-no-unused-expression-chai": "^0.1.4"
   }
 }
