--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/ts-node src/app/main.ts",
-    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts"
+    "test": "nyc --reporter=html --reporter=text ./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "@types/mocha": "^8.0.3",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "nyc": "^15.1.0",
     "sinon": "^9.0.3",
     "tslint": "^6.1.3",
     "tslint-no-unused-expression-chai": "^0.1.4"
