--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/ts-node src/app/main.ts",
-    "test": "nyc --reporter=html --reporter=text ./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts"
+    "test": "nyc --reporter=html --reporter=text ./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts",
+    "tslint": "./node_modules/.bin/tslint -c tslint.json --project . --force"
   },
   "author": "",
   "license": "ISC",
